Fixes #16430: Some alignement issues

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-groups.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-groups.css
@@ -79,3 +79,47 @@
   margin-bottom: 10px;
 }
 
+
+/* === TOGGLE BUTTONS === */
+label.radio-inline {
+  padding: 0;
+  margin: 0 !important;
+}
+label.radio-inline > input {
+  display: none;
+}
+label.radio-inline > span {
+  border: 1px solid #d0d0d0;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 6px 12px;
+  margin: 0;
+  transition-duration: .2s;
+  min-width: 50px;
+  display: inline-block;
+  color: #555;
+}
+label.radio-inline + label.radio-inline > span {
+  border-left: none;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  margin: 0;
+}
+label.radio-inline > input:checked + span {
+  background-color: #3694d1;
+  color: #fff;
+  border-color: #2173a9;
+}
+label.radio-inline:hover > input:checked + span {
+  background-color: #337ab7;
+
+}
+label.radio-inline:hover > span {
+  background-color: #f7f7f7;
+  color: #333;
+}
+.align-radio-generate-input span{
+  vertical-align: initial;
+}
